adicionei a imagem ferive

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Site Em repositorio</title>
+
+    <title>HTML5 e CCS3- One page site</title>
+    <meta name="description" content="Aprsenda HTML5, CSS3 e SEO de forma simple, pratica e objectiva desenvolvendo passo a passo do zero ate a hospedagem um site one page moderno e responsivo" >
+    <link rel="icon" href="imag/favicon.png">
 </head>
 <body>
-  <h1>Ola, Mundo!</h1>
-  <hr> 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia doloribus, molestias architecto ipsa quod accusantium ipsum, adipisci voluptates eveniet id earum, cupiditate ullam aperiam optio? Quae, officiis perferendis. Facilis, corrupti?</p>
+  
 </body>
 </html>
