--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,6 +7,7 @@
     <title>HTML5 e CCS3- One page site</title>
     <meta name="description" content="Aprsenda HTML5, CSS3 e SEO de forma simple, pratica e objectiva desenvolvendo passo a passo do zero ate a hospedagem um site one page moderno e responsivo" >
     <link rel="icon" href="imag/favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
