--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <!-- Cabecalho -->
+  <header>
+
+  </header>
+  <!-- Destaque/conteudo principal -->
+  <main>
+  <h1>HTML5 e CSS3</h1>
+  <h2>voce faz, voce ve, voce aprende</h2>
+  </main>
+  <!-- sobre -->
+  <section>
+   <h2>Aprender na pratica</h2>
+
+  </section>
+  <!-- one page -->
+  <section>
+   <h2> one page site</h2>
+  </section>
+  <!-- Wireframe -->
+  <section>
+   <h2>Wireframe</h2>
+  </section>
+ <!-- conteudo -->
+ <section>
+   <h2> texto</h2>
+   <h3>HTML5 </h3>
+   <h3> Box model CSS </h3>
+   <h3>Breakpoints</h3>
+ </section>
+  <!-- Rodape -->
+  <footer>
+
+  </footer>
+
+
 </body>
 </html>
