--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,36 +12,50 @@
 <body>
   <!-- Cabecalho -->
   <header>
+   <div class="Container">
 
+   </div>
   </header>
   <!-- Destaque/conteudo principal -->
   <main>
-  <h1>HTML5 e CSS3</h1>
-  <h2>voce faz, voce ve, voce aprende</h2>
+    <div class="Container">
+        <h1>HTML5 e CSS3</h1>
+        <h2>voce faz, voce ve, voce aprende</h2>
+    </div>
   </main>
   <!-- sobre -->
   <section>
-   <h2>Aprender na pratica</h2>
-
+   <div class="Container">
+    <h2>Aprender na pratica</h2>
+   </div>
   </section>
   <!-- one page -->
   <section>
-   <h2> one page site</h2>
+    <div class="Container">
+        <h2> one page site</h2>
+    </div>
   </section>
   <!-- Wireframe -->
   <section>
-   <h2>Wireframe</h2>
+    <div class="Container">
+        <h2>Wireframe</h2>
+    </div>
+   
   </section>
  <!-- conteudo -->
  <section>
-   <h2> texto</h2>
-   <h3>HTML5 </h3>
-   <h3> Box model CSS </h3>
-   <h3>Breakpoints</h3>
+    <div class="Container">
+        <h2> texto</h2>
+        <h3>HTML5 </h3>
+        <h3> Box model CSS </h3>
+        <h3>Breakpoints</h3>
+    </div>
  </section>
   <!-- Rodape -->
   <footer>
-
+   <div class="container">
+    
+   </div>
   </footer>
 
 
