--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,9 +11,21 @@
 </head>
 <body>
   <!-- Cabecalho -->
-  <header>
+  <header id="Inicio">
    <div class="Container">
-
+    <div id="logo">
+        <img src="imag/logo.png" alt="hal 9000">
+    </div>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check">&#x2263;</label>
+        <ul>
+            <li><a href="#Inicio">Inicio</a></li>
+            <li><a href="#Sobre">Sobre</a></li>
+            <li><a href="#Conteudo">Conteudo</a></li>
+            <li><a href="#Contacto">Contacto</a></li>
+        </ul>
+    </nav
    </div>
   </header>
   <!-- Destaque/conteudo principal -->
@@ -24,7 +36,7 @@
     </div>
   </main>
   <!-- sobre -->
-  <section>
+  <section id="Sobre">
    <div class="Container">
     <h2>Aprender na pratica</h2>
    </div>
@@ -43,7 +55,7 @@
    
   </section>
  <!-- conteudo -->
- <section>
+ <section id="Conteudo">
     <div class="Container">
         <h2> texto</h2>
         <h3>HTML5 </h3>
@@ -52,12 +64,13 @@
     </div>
  </section>
   <!-- Rodape -->
-  <footer>
+  <footer id="Contacto">
    <div class="container">
-    
-   </div>
-  </footer>
 
+   </div>
+
+  </footer>
+<a href="#Inicio" id="topo"><img src="imag/topo.png" alt="topo do site"></a>
 
 </body>
 </html>
