--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Cabecalho -->
   <header id="Inicio">
-   <div class="Container">
+   <div class="Container Flex">
     <div id="logo">
         <img src="imag/logo.png" alt="hal 9000">
     </div>
