--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -37,9 +37,29 @@
     </div>
   </main>
   <!-- sobre -->
-  <section id="Sobre">
-   <div class="Container">
-    <h2>Aprender na pratica</h2>
+  <section id="sobre">
+   <div class="Container  Flex2">
+    <div id="destaqueSobre">
+     <img src="imag/html5css3.jpg" alt="html5css3">
+    </div>
+    <div id="textSobre">
+      <h2>Aprender na pratica</h2>
+      <h2>Aprenda  HTML5 , CSS3 e SEO de forma simples, pratica e objectiva desenvolvendo passo a passo do zero ate a hospedagem um site one page moderno e responsivo</h2>
+      <div class="topicoSobre Flex2">
+        <img src="imag/html5.png" alt="html5">
+        <p>HTML5</p>
+      </div>
+      <div class="topicoSobre Flex2">
+        <img src="imag/css3.png" alt="CSS3">
+        <p>CSS3</p>
+      </div>
+      <div class="topicoSobre Flex2">
+       <img src="imag/seo.png" alt="SEO">
+       <p>SEO</p>
+
+      </div>
+    </div>
+    
    </div>
   </section>
   <!-- one page -->
