modifiquei one page

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -25,7 +25,7 @@
             <li><a href="#Conteudo">Conteudo</a></li>
             <li><a href="#Contacto">Contacto</a></li>
         </ul>
-    </nav
+      </nav>
    </div>
   </header>
   <!-- Destaque/conteudo principal -->
@@ -33,7 +33,7 @@
     <div class="Container">
         <h1>HTML5 e CSS3</h1>
         <h2>voce faz, voce ve, voce aprende</h2>
-        <a href="https://www.youtube.com/watch?v=M2GjflypG6E&list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk&index=15"target="_blank" class="Botao">Saiba +</a>
+        <a href="https://www.youtube.com/watch?v=M2GjflypG6E&list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk&index=15" target="_blank" class="Botao">Saiba +</a>
     </div>
   </main>
   <!-- sobre -->
@@ -63,9 +63,17 @@
    </div>
   </section>
   <!-- one page -->
-  <section>
-    <div class="Container">
+  <section id="onePage">
+    <div class="Container Flex3">
+      <div id="textoSite">
         <h2> one page site</h2>
+        <p>Ideal para negocios de pequeno e medio porte o "one page site" e um site onde voce inclui todas informacoes que o visitante precisa de forma objectiva e criativa em uma unica pagina</p>
+      </div>
+      <div id="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bS720dGvAn8" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+      </div>
+        
     </div>
   </section>
   <!-- Wireframe -->
